...
        android:id="@+id/padreScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnCreate"
        app:layout_constraintTop_toBottomOf="@id/titleCreateCand">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="28"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="25"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/numbers_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/document"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:contentDescription=""
                        android:maxLength="9"
                        android:backgroundTint="@color/GrisClaro"
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:maxLength="45"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/date_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fechanac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="10"
                        android:inputType="date"
                        android:backgroundTint="@color/GrisClaro"
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="13"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/city_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:maxLength="40"
                        android:backgroundTint="@color/GrisClaro"
                        android:textColor="@color/black"
...
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/location_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="50"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
...
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_candidate_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
