...
                        android:layout_marginStart="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtApellidosCand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:text="@{candidato.apellidos}" />

                        <TextView
                            android:id="@+id/txtNombresCand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:text="@{candidato.nombres}" />
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_document" />

                    <TextView
                        android:id="@+id/txtDocumento"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/lblDocumento"
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_birthday" />

                    <TextView
                        android:id="@+id/txtFechaNac"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtDocumento"
                        app:layout_constraintLeft_toRightOf="@+id/lblFechaNac"
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_email" />

                    <TextView
                        android:id="@+id/txtMail"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtFechaNac"
                        app:layout_constraintLeft_toRightOf="@+id/lblMail"
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_phone" />

                    <TextView
                        android:id="@+id/txtTelefono"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtMail"
                        app:layout_constraintLeft_toRightOf="@+id/lblTelefono"
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_city" />

                    <TextView
                        android:id="@+id/txtCiudad"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
                        app:layout_constraintLeft_toRightOf="@+id/lblCiudad"
...
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/candidate_address" />

                    <TextView
                        android:id="@+id/txtDireccion"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtCiudad"
                        app:layout_constraintLeft_toRightOf="@+id/lblDireccion"
...
