<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="login" type="com.example.abcjobsnav.models.Login"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtFieldUsuario"
                app:startIconDrawable="@drawable/usuario_24"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_login_username"
                android:textColorHint="@color/black"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_login_username"
                app:counterEnabled="true"
                app:counterMaxLength="20"

                app:counterTextColor="@color/black"
                app:helperTextTextColor="@color/black"
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:backgroundTint="@color/GrisClaro"
                    android:contentDescription="@null"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtFieldClave"
                app:startIconDrawable="@drawable/candado1_24"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_login_password"
                android:textColorHint="@color/black"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_login_password"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterTextColor="@color/black"
                app:helperTextTextColor="@color/black"
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:password="true"
                    android:text=""
                    android:backgroundTint="@color/GrisClaro"
                    android:maxLength="15" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/login_submit" />

            <Button
                android:id="@+id/textButtonSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>