...
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:contentDescription=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:backgroundTint="@color/GrisClaro"
                    android:text="" />
...
                app:helperTextTextColor="@color/black"
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/GrisClaro"
                    android:text="" />
...
                app:helperTextTextColor="@color/black"
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:backgroundTint="@color/GrisClaro"
                    android:text="" />
...
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:text="@string/abcjob_employee_type"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signup_submit"
                />

            <Button
                android:id="@+id/textButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
